First wave of improvements Name length bug squashed Responsiveness greatly improved Visual improvements

--- a/styles.css
+++ b/styles.css
@@ -2,32 +2,13 @@ body {
   margin: 0px;
   background-color: #2196f3;
 }
-/* Tic Tac Toe container */
-.container {
-  user-select: none;
-  display: grid;
-  grid-template-areas: "message message message";
-  grid-template-columns: 1fr auto 1fr;
-  grid-template-rows: max-content;
-  gap: 20px;
-
-  box-sizing: border-box;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 100vw;
-
-  padding: 20px;
-  background-color: rgba(255, 255, 255, 0.6);
-  background-clip: content-box;
-}
 .screen::before {
   content: "";
   position: absolute;
   background: url("assets/background.png");
   background-size: 128px 128px;
   background-repeat: repeat;
-  animation: slide 60s linear infinite;
+  animation: slide 30s linear infinite alternate;
   opacity: 0.1;
   top: 0px;
   right: 0px;
@@ -35,12 +16,43 @@ body {
   bottom: 0px;
   filter: grayscale();
 }
+@keyframes slide {
+  0% {
+    background-position: 0% 100%;
+  }
+  100% {
+    background-position: 100% 0%;
+  }
+}
+/* Tic Tac Toe container */
+.container {
+  user-select: none;
+  display: grid;
+  grid-template-areas: "message message message";
+  grid-template-columns: 1fr 25vh 1fr;
+  grid-template-rows: max-content 25vh 1fr;
+  gap: 20px;
+
+  box-sizing: border-box;
+  position: absolute;
+  bottom: 50%;
+  right: 50%;
+  transform: translateX(50%) translateY(50%);
+  width: 1000px;
+  max-width: 100vw;
+  height: 600px;
+  max-height: 75vh;
+
+  padding: 20px;
+  background-color: rgba(255, 255, 255, 0.6);
+  background-clip: content-box;
+}
 /* Message text*/
 .message {
   padding-top: 20px;
   grid-area: message;
 
-  font-size: 34px;
+  font-size: calc(1vw + 1.5vh + 0.5vmin + 0.5vmax);
   font-family: "Courier New";
   font-weight: bold;
   text-align: center;
@@ -75,8 +87,7 @@ body {
 .info {
   box-sizing: border-box;
   background-color: rgba(0, 0, 0, 0.35);
-  text-align: center;
-  backdrop-filter: blur(4px);
+  backdrop-filter: blur(2px);
 }
 #leftInfo {
   margin-left: 20px;
@@ -87,14 +98,15 @@ body {
 .nameInput {
   box-sizing: border-box;
   background-color: lightblue;
-  margin: 10px;
-  height: 50px;
-  line-height: 40px;
+  height: 30%;
+  max-height: calc(4vh + 14px);
+  line-height: 4vh;
   text-align: center;
+
   border: 7px solid rgba(0, 0, 0, 1);
   font-family: "Courier New";
   font-weight: bolder;
-  font-size: 24px;
+  font-size: 4vh;
 }
 .disabledNameInput {
   background-color: transparent;
@@ -112,29 +124,32 @@ body {
   animation-duration: 4s;
 }
 .imageContainer {
-  width: fill;
-  height: 270px;
+  display: flex;
+  width: 100%;
+  height: 70%;
+  justify-content: center;
+  flex-direction: column;
 }
 .teamImage {
+  margin: auto;
   background-color: rgba(0, 0, 0, 0.5);
-  width: 100px;
-  height: 100px;
+  box-sizing: border-box;
+
+  width: calc(25vh / 3);
+  height: calc(25vh / 3);
   border: 7px solid rgba(0, 0, 0, 1);
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
 }
 /* Grid */
 .grid {
   display: grid;
-  grid-template-columns: repeat(3, 100px);
-  grid-template-rows: repeat(3, 100px);
-  gap: 20px;
+  grid-template-columns: repeat(3, 30%);
+  grid-template-rows: repeat(3, 30%);
+  gap: 5%;
 }
 .cell {
   box-sizing: border-box;
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 100%;
   background-color: rgba(255, 255, 255, 0.25);
   border: 7px solid rgba(0, 0, 0, 1);
   backdrop-filter: blur(4px);
@@ -181,25 +196,27 @@ body {
 }
 /* Buttons */
 #buttonArea {
-  display: flex;
+  display: grid;
+  column-gap: 5%;
+  grid-template-columns: 1fr 1fr;
+  margin: 0px 20px;
   grid-column: 1/-1;
-  height: 90px;
+  height: calc(100% - 20px);
   background-color: rgba(255, 255, 255, 0.5);
-  justify-content: center;
-  align-items: center;
-  backdrop-filter: blur(4px);
 }
 .button {
-  width: 150px;
-  height: 50px;
+  margin: auto;
+  box-sizing: border-box;
+  width: 75%;
+  max-height: calc(6vh + 11px);
+  line-height: 6vh;
   border: 7px solid black;
   border-radius: 35px;
   cursor: pointer;
-  font-size: 40px;
+  font-size: calc(2vw + 1.5vh + 0.5vmin);
   font-family: "Courier New";
   font-weight: bold;
   text-align: center;
-  line-height: 50px;
   color: white;
   transition: opacity 0.5s ease-in-out;
   opacity: 50%;
@@ -210,8 +227,11 @@ body {
 .button:hover {
   opacity: 100%;
 }
-#startButton {
-  background-color: red;
+#PvPButton {
+  background-color: orange;
+}
+#PvEButton {
+  background-color: yellowgreen;
 }
 /* Shared */
 .noHover {
@@ -220,13 +240,4 @@ body {
 
 .containexr {
   overflow: hidden;
-}
-
-@keyframes slide {
-  0% {
-    background-position: 0% 100%;
-  }
-  100% {
-    background-position: 100% 0%;
-  }
 }
